--- a/react/ssoss/package.json
+++ b/react/ssoss/package.json
@@ -14,8 +14,7 @@
     "react-dom": "^18.2.0",
     "react-move": "^6.5.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.5.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.5.3"
   },
   "scripts": {
     "predeploy": "npm run build",
