--- a/react/ssoss/package.json
+++ b/react/ssoss/package.json
@@ -3,19 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-move": "^6.5.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^5.5.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.5.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -27,8 +17,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
